lintian (2.5.41) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/cruft.{desc,pm}:
    + [BR] Filter some simple comments for long line in source-is-missing
      (Closes: #798900).
    + [BR] Detect pandoc docs avoiding source-is-missing warning.
  * checks/files.pm:
    + [JW] Treat packages without Multi-Arch field as if they had
      "Multi-Arch: no".  Thanks to Bas Couwenberg for the bug report.

  * data/spelling/corrections:
    + [JW] Fix some corrections.
    + [JW] Add more corrections.

  * helper/coll/objdump-info-helper:
    + [NT] Avoid collecting unused information.

  * lib/Lintian/Path.pm:
    + [NT] Remove the _file_info cache field to avoid paying
      for all "file(1)" info twice.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Remove unnecessary values on members in the
      objdump_info table.
  * lib/Lintian/Processable*.pm:
    + [JW] Fix typos.
  * lib/Lintian/Tag/Override.pm:
    + [JW] Fix typo.

 -- Niels Thykier <niels@thykier.net>  Sun, 24 Jan 2016 12:58:06 +0000

lintian (2.5.40.2) unstable; urgency=medium

  * checks/cruft.pm:
    + [BR] Check package testsuite for license problems.
    + [BR] Allow multiple full texts for license problems.
    + [BR] Detect link copyright tag and warn in case of
      cc-by-nc-sa

  * data/spelling/corrections*:
    + [JW] Add more corrections.

  * debian/post{inst,rm}:
    + [NT] Remove obsolete maintainer scripts.
  * debian/tests/testsuite:
    + [NT] Remove temporary directory after test.

  * lib/Lintian/Collect/Source.pm:
    + [JW] Fix typo.
  * lib/Lintian/Lab/Entry.pm:
    + [JW] Fix typo.

  * reports/html_reports:
    + [NT] Fix uninitialized warnings.
    + [NT] Remove ""-quotes covering the full maintainer name.
      This makes "Adam" sort under "A" rather than "Other" on the
      list of maintainers.

 -- Niels Thykier <niels@thykier.net>  Sun, 24 Jan 2016 12:52:18 +0000

lintian (2.5.40.1) unstable; urgency=medium

  * debian/rules: