@@ -6,6 +6,7 @@ lintian (2.5.41) UNRELEASED; urgency=medium
     + [BR] Filter some simple comments for long line in source-is-missing
       (Closes: #798900).
     + [BR] Detect pandoc docs avoiding source-is-missing warning.
+    + [BR] Fix other source-is-missing FP. (Closes: #813013).
   * checks/files.pm:
     + [JW] Treat packages without Multi-Arch field as if they had
       "Multi-Arch: no".  Thanks to Bas Couwenberg for the bug report.
